@@ -460,6 +460,7 @@ exit 0
 - dynamically link /bin/rpm, link against good old -lpthread.
 - test pthread_{mutex,cond}attr_setpshared(), add DB_ENV_PRIVATE if not.
 - error on exclusive Packages fcntl lock if DB_ENV_PRIVATE is set.
+- copy compressFilelist to convertdb1.c, remove internal legacy.h.
 
 * Thu Dec 19 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.31
 - statically link against /usr/lib/nptl/libpthread.a, if present.
